--- a/prepros.config
+++ b/prepros.config
@@ -919,6 +919,36 @@
         "config": {
           "autoCompile": true
         }
+      },
+      {
+        "file": "scss/about.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/contact.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/home.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/locations.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/nav.scss",
+        "config": {
+          "compileImported": true
+        }
       }
     ]
   }
